--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -52,9 +52,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <!--                <td th:text="${capacitador.codigoempleado.codigoempleado}">Email</td>-->
                 
                 <td>
-                    <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-default">Edit</a>
-                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Delete</a></td>
+                      <a th:href="${'./new/capacitador'}" class="btn btn-primary">Nuevo</a>
+                    <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-info">Mostrar</a>
+                <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-success">Edit</a>
+                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Delete</a></td>
                 <!--<a th:href="${'./delete/' + capacitador.codigocapacitador}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
