--- a/src/main/resources/templates/fragments/cuadrodirectivo/listCuadrodirectivo.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/listCuadrodirectivo.html
@@ -1,23 +1,23 @@
 
 
-<div th:if="${#lists.size(capacitaciones)} == 0" class="alert alert-success" role="alert">No hay datos...</div>
+<div th:if="${#lists.size(cuadrodirectivos)} == 0" class="alert alert-success" role="alert">No hay datos...</div>
 
-<table th:if="${#lists.size(capacitaciones)} != 0" class="table table-bordered">
+<table th:if="${#lists.size(cuadrodirectivos)} != 0" class="table table-bordered">
                   <thead>
-                      <th>Código</th>
-                      <th>Nombre</th>
-                      <th>Descripción</th>
-                      <th>Categoria</th>
-                      <th>Descripción categoria</th>
-                      <th>Fecha</th>
+                      <th>codigocuadrodirectivo</th>
+                <th>responsablecuadrodirectivo</th>
+                <th>area</th>
+                <th>desripcioncuadrodirectivo</th>
+                <th>fechapresentacion</th>
+               
                   </thead>
                   
-                  <tbody th:each="c: ${capacitaciones}">
-                      <td th:text="${c.codigocapacitacion}"></td>
-                      <td th:text="${c.nombrecapacitacion}"></td>
-                      <td th:text="${c.descripcioncapacitacion}"></td>
-                      <td ></td>
-                      <td></td>
-                      <td></td>
+                  <tbody th:each="cuadrodirectivo: ${cuadrodirectivos}">
+                     <td th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
+                <!--<td th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</td>-->
+                <td th:text="${cuadrodirectivo.area}">area</td>
+                <td th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</td>
+                <td th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">F. Presentacion</td>
+                
                   </tbody>
         </table>
