--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -129,7 +129,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                         <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+                         <button type="button" class="btn btn-info"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
                     </div>
                 </div>
             </div>
