--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -28,18 +28,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
 <!--          <input type="hidden" th:field="*{codigocomite}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-             <div class="form-group">
+<!--             <div class="form-group">
                 <label class="col-sm-2 control-label">DUI:</label>
                 <div class="col-sm-10">
                     <input type="text" size="17" maxlength="17" class="form-control num_dui" id="dui" placeholder="XXXXXXX-X" th:field="*{dui}"/>
                 </div>
-            </div>
-             <div class="form-group">
+            </div>-->
+<!--             <div class="form-group">
                 <label class="col-sm-2 control-label">NIT:</label>
                 <div class="col-sm-10">
                     <input type="text"  class="form-control num_nit"  id="nit"  placeholder="XXXX-XXXXXX-XXX-X"  th:field="*{nit}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de comite:</label>
                 <div class="col-sm-10">
@@ -103,8 +103,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
 <div class="col-md-12">
             <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="button" class="btn btn-info"><a href="#" th:href="@{/comites/}">Regresar</a></button>
+                <button type="submit" class="btn btn-primary">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
