--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -27,9 +27,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <table class="table table-striped">
                         <tr>
                              <th>Codigo</th>
-                            <th>DUI</th>
-                            <th>Nit</th>
-                           
                             <th>Nombre</th>
                             <th>Responsable</th>
                             <th>Descripcion</th>
@@ -44,9 +41,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <tr th:each="comite : ${comites}">
                             <td th:text="${comite.codigocomite}">Codigo</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
-                            <td th:text="${comite.dui}">DUI</td>
-                            <td th:text="${comite.nit}">NIT</td>
-                            <td th:text="${comite.responsablecomite}">Responsable</td>
+<!--                            <td th:text="${comite.dui}">DUI</td>
+                            <td th:text="${comite.nit}">NIT</td>-->
+                            <td th:text="${comite.codigoempleado.nombreempleado}">Responsable</td>
                             <td th:text="${comite.desripcioncomite}">Descripcion</td>
                             <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
                             <td th:text="${comite.miembromaximo}">Miembro maximo</td>
@@ -54,18 +51,24 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
 <!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
 
-                            <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
-                            <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
-                           <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Delete</a></td>
+                            <td>
+                                 <a th:href="${'./new/comite'}" class="btn btn-primary">Nuevo</a>
+                                <a th:href="${'./show/' + comite.codigocomite}" class="btn btn-info">Mostrar</a>
+                           <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-success">Editar</a>
+                                <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Eliminar</a>
+                            </td>
+                           
                             <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
                         </tr>
                     </table>
                 </div>
-                <div class="col-md-12">
+               
+            </div>    
+             <div class="col-md-12">
                     <th:block th:include="../templates/footer"></th:block>
-                </div>
-            </div>     
+                </div>   
     </div>
+    
 <!--</div>-->
  <script th:inline="javascript">
         $(document).ready(function () {
