--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -23,7 +23,7 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
                         </div>
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-5 control-label">DUI:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.dui}">DUI</p>
@@ -34,7 +34,7 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.nit}">NIT</p>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre de comite:</label>
                             <div class="col-sm-7">
@@ -42,9 +42,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Sueldo Base:</label>
+                            <label class="col-sm-5 control-label">Responsable Comite:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.responsablecomite}">Responsable</p>
+                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Responsable</p>
                             </div>
                         </div>
                         <div class="form-group">
@@ -81,12 +81,12 @@
                             </div>
                         </div>
                         
-                        <div class="form-group">
+<!--                        <div class="form-group">
                             <label class="col-sm-7 control-label">Empleado:</label>
                             <div class="col-sm-5">
                                 <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Fecha hasta </p>
                             </div>
-                        </div>
+                        </div>-->
                         
                     </div> 
 
