--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -56,7 +56,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/costocapacitaciones/}">Regresar</a></button>
+                        <button type="submit" class="btn btn-info"><a href="#" th:href="@{/costocapacitaciones/}">Regresar</a></button>
 
                     </div>
                 </div>
