--- a/src/main/resources/templates/fragments/cuadrodirectivo/buscar.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/buscar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH-Detalle de capacitaciones</title>
+        <title>Buscar Cuadro directivos por area</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -19,7 +19,7 @@
           <br />
           <div class="input-group col-sm-4">
               <div class="input-group-addon"><span class="glyphicon glyphicon-search"></span></div>
-            <input type="text" name="buscar_capacitacion" id="buscar_capacitacion" class="form-control" placeholder="Buscar capacitación" />
+            <input type="text" name="buscar_cuadrodirectivo" id="buscar_cuadrodirectivo" class="form-control" placeholder="Buscar Cuadros Directivos" />
           </div>
           
           
@@ -33,12 +33,12 @@
           <div id="list_capacitacion">
               <table class="table table-bordered">
                   <thead>
-                      <th>Codigo</th>
-                      <th>Nombre</th>
-                      <th>Descripción</th>
-                      <th>Categoria</th>
-                      <th>Descripción categoria</th>
-                      <th>Fecha</th>
+                    <th>codigocuadrodirectivo</th>
+                <th>responsablecuadrodirectivo</th>
+                <th>area</th>
+                <th>desripcioncuadrodirectivo</th>
+                <th>fechapresentacion</th>
+               
                   </thead>
                   
                   <tbody>
@@ -56,9 +56,9 @@
       <script type="text/javascript">
           $(document).ready(function (){
               var content = $("#content_work");
-              Autocompletar_input(content,"buscar_capacitacion","/sisadmrh/capacitaciones/buscar/listar/",'html',function(result) {
+              Autocompletar_input(content,"buscar_cuadrodirectivo","/sisadmrh/cuadrodirectivos/buscar/listar/",'html',function(result) {
     
-                        content.find("#list_capacitacion").html(result);
+                        content.find("#listCuadrodirectivo").html(result);
     
                 });
               
