--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -13,10 +13,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
 <div class="row">
-   <div class="col-md-3">
+   <div class="col-md-2">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
-     <div class="col-md-9">
+     <div class="col-md-10">
         
           <div class="row text-center">
                         <img src="../../static/image/cuadros.png" width="100" th:src="@{/image/cuadros.png}"/>
@@ -26,27 +26,29 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
        
         <table class="table table-striped">
             <tr>
-                <th>codigocuadrodirectivo</th>
-                <th>responsablecuadrodirectivo</th>
-                <th>area</th>
-                <th>desripcioncuadrodirectivo</th>
-                <th>fechapresentacion</th>
+                <th>Codigo</th>
+                <th>Responsable</th>
+                <th>Area</th>
+                <th>Descripcion</th>
+                <th>Fecha Presentacion</th>
                
                  <th>Acciones</th>
                 
             </tr>
             <tr th:each="cuadrodirectivo : ${cuadrodirectivos}">
-                <td th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
-                <!--<td th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</td>-->
+                <td align="center" th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
+                <td th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Responsable</td>
                 <td th:text="${cuadrodirectivo.area}">area</td>
                 <td th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</td>
                 <td th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">F. Presentacion</td>
                 
                 
                 
-                <td><a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-default">Edit</a>
-               <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Delete</a></td>
+                <td>
+                     <a th:href="${'./new/cuadrodirectivo'}" class="btn btn-primary">Nuevo</a>
+                    <a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-info">Mostrar</a>
+                <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-success">Editar</a>
+               <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Eliminar</a>
                 <!--<a th:href="${'./delete/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
