--- a/src/main/resources/templates/fragments/inasistencia/listInasistencia.html
+++ b/src/main/resources/templates/fragments/inasistencia/listInasistencia.html
@@ -1,39 +1,33 @@
 
 
-<div th:if="${#lists.size(capacitadores)} == 0" class="alert alert-success" role="alert">No hay datos...</div>
+<div th:if="${#lists.size(inasistencias)} == 0" class="alert alert-success" role="alert">No hay datos...</div>
 
-<table th:if="${#lists.size(capacitadores)} != 0" class="table table-bordered">
+<table th:if="${#lists.size(inasistencias)} != 0" class="table table-bordered">
                   <thead>
-                      <th>Código</th>
-                      <<th>Nombre</th>
-                <th>Tema Dominio</th>
-                <th>Institucion</th>
-                <th>Tipo Capacitador</th>
-                <th>Tipo Agrupacion</th>
-                  <th>Dui</th>
-                  <th>Nit</th>
-                  <th>Carnet Residente</th>
-                  <th>Telefono</th>
-                  <th>Celular</th>
-                  <th>Email</th>
-                  </thead>
+                 <th>Codigo inasistencia</th>
+                <th>Nombre Empleado</th>
+                <th>Motivo Inasistencia</th>
+                <th>Justificacion</th>
+                <th>Fecha Desde</th>
+                <th>FechaHasta</th>
+               
+<!--               <th>Acciones</th>-->
                   
-                  <tbody th:each="c: ${capacitadores}">
-                      <td th:text="${c.codigocapacitador}"></td>
-                      <td th:text="${c.nombrecapacitador}"></td>
-                      <td th:text="${c.temadominio}"></td>
-                      <td th:text="${c.institucioncapacitador}"></td>
-                      <td th:text="${c.tipocapacitador}"></td>
-                      <td th:text="${c.tipoagrupacion}"></td>
-                        <td th:text="${c.duicapacitador}"></td>
-                      <td th:text="${c.nitcapacitador}"></td>
-                      <td th:text="${c.carnetresidencia}"></td>
-                       <td th:text="${c.telefonocapacitador}"></td>
-                        <td th:text="${c.telefonomovilcapacitador}"></td>
-                      <td th:text="${c.emailcapacitador}"></td>
-                     
-                      <td ></td>
-                      <td></td>
-                      <td></td>
+                  <tbody  th:each="inasistencia : ${inasistencias}">
+                <td th:text="${inasistencia.codigoinasistencia}">Codigo</td>
+                <td th:text="${inasistencia.codigoempleado.nombreempleado}">Nombre</td>
+                <td th:text="${inasistencia.motivoinasistencia}">Motivo</td>
+                <td th:text="${inasistencia.constanciainasistencia}">Justificacion</td>
+                <td th:text="${inasistencia.fechadesdeinasistencia}"> Desde</td>
+                <td th:text="${inasistencia.fechahastainasistencia}"> Hasta</td>
+              
+                
+<!--                <td>
+                    <a th:href="${'./show/' + inasistencia.codigoinasistencia}" class="btn btn-default">Mostrar</a>
+                <a th:href="${'./edit/' + inasistencia.codigoinasistencia}" class="btn btn-default">Edit</a>
+                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${inasistencia.codigoinasistencia} + '\');'" >Delete</a>
+               <td><a th:href="${'./delete/' + capacitacion.codigocapacitacion}" class="btn btn-danger">Delete</a></td>
+                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Delete</a></td>  
+                </td>-->
                   </tbody>
         </table>
