--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -33,6 +33,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <input type="text" class="form-control" th:field="*{codigonivelnivelescolaridad}"/>
                 </div>
             </div>-->
+
 <div class="form-group">
                 <label class="col-sm-2 control-label">Estudios realizados:(*)</label>
                 <div class="col-sm-10">
@@ -98,8 +99,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             
             <div class="col-md-12">
             <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="button" class="btn btn-info"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
+                <button type="submit" class="btn btn-primary">Guardar</button>
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
