--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -65,6 +65,7 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Cuadros Directivos <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
+                                             <li><a href="#" th:href="@{/cuadrodirectivos/buscar/}">Buscar Cuadros directivos</a></li>
 						<li><a href="#" th:href="@{/cuadrodirectivos/}">Consultar Cuadros Directivos</a></li>
                                                 <li><a href="#" th:href="@{/cuadrodirectivos/new/cuadrodirectivo}">Crear Cuadros Directivos</a></li>
                                                 <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivo</a></li>
@@ -137,6 +138,7 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/comites/}">Consultar comites</a></li>
                                                  <li><a href="#" th:href="@{/comites/new/comite}">Crear comite</a></li>
+                                                  <li><a href="#" th:href="@{/comites/buscar/}">Buscar Comites</a></li>
                                                  <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
                                         </ul>
 				</li>
@@ -172,6 +174,7 @@
                                   <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Inasistencias <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
+                                              <li><a href="#" th:href="@{/inasistencias/buscar/}">Buscar Capacitaciones</a></li>
                                                 <li><a href="#" th:href="@{/inasistencias/}">Consultar Inasistencias</a></li>
                                                 <li><a href="#" th:href="@{/inasistencias/new/inasistencia}">Crear Inasistencias</a></li>
                                                 <!--<li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte de Comisiones</a></li>-->
