--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -52,7 +52,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
 
                             <td>
-                                 <a th:href="${'./new/comite'}" class="btn btn-primary">Nuevo</a>
+                                 <!--<a th:href="${'./new/comite'}" class="btn btn-primary">Nuevo</a>-->
                                 <a th:href="${'./show/' + comite.codigocomite}" class="btn btn-info">Mostrar</a>
                            <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-success">Editar</a>
                                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Eliminar</a>
