--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitaciones.html
@@ -50,7 +50,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
                 
                 <td>
-                     <a th:href="${'./new/costocapacitacion'}" class="btn btn-primary">Nuevo</a>
+                     <!--<a th:href="${'./new/costocapacitacion'}" class="btn btn-primary">Nuevo</a>-->
                     <a th:href="${'./show/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-info">Mostrar</a>
                 <a th:href="${'./edit/' + costocapacitacion.codigocostocapacitacion}" class="btn btn-success">Edit</a>
                <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${costocapacitacion.codigocostocapacitacion} + '\');'" >Delete</a></td>
