--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitaciones.html
@@ -31,14 +31,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Lugar Evaluacion</th>
                 <th>Hora</th>
                 <th>Dominio Tema</th>
-                <th>Habilidad Comunicacion</th>
-                <th>Llena sus Espectativas</th>
-                <th>Contenido se desarrolla con claridad</th>
+<!--                <th>Habilidad Comunicacion</th>
+                <th>Llena sus Espectativas</th>-->
+<!--                <th>Contenido se desarrolla con claridad</th>
                 <th>Aclara Dudas</th>
                 <th>Mantiene el Interes del Tema</th>
                 <th>Satisfaccion en el Tema</th>
-                <th>Comprension del Tema</th>
-                <th>Planeacion del tema</th>
+                <th>Comprension del Tema</th>-->
+<!--                <th>Planeacion del tema</th>
                 <th>Distribucion de tiempo</th>
                 <th>Contenido Claro</th>
                 <th>Contenido aplicado a su trabajo</th>
@@ -48,7 +48,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <th>Material Apropiado</th>
                       <th>Tiempo Capacitacion Optimo</th>
                       <th>Comentario o Sugerencia</th>
-                      <th>Puntualidad en Fecha y Hora</th>
+                      <th>Puntualidad en Fecha y Hora</th>-->
                       
                <th>Acciones</th>
                 
@@ -61,14 +61,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${evaluacioncapacitacion.horaevualuacioncapacitacion}">Hora</td>
                 <td th:text="${evaluacioncapacitacion.dominiotema}">Dominio Tema</td>
                 <td th:text="${evaluacioncapacitacion.habilidadcomunicacion}">Habilidad Comunicacion</td>
-                <td th:text="${evaluacioncapacitacion.espectativa}">Llena sus Espectativas</td>
-                <td th:text="${evaluacioncapacitacion.claridadtema}">Contenido se desarrolla con claridad</td>
-                <td th:text="${evaluacioncapacitacion.alclaradudas}">Aclara Dudas</td>
+<!--                <td th:text="${evaluacioncapacitacion.espectativa}">Llena sus Espectativas</td>
+                <td th:text="${evaluacioncapacitacion.claridadtema}">Contenido se desarrolla con claridad</td>-->
+<!--                <td th:text="${evaluacioncapacitacion.alclaradudas}">Aclara Dudas</td>
                 <td th:text="${evaluacioncapacitacion.interestema}">Mantiene el Interes del Tema</td>
                 <td th:text="${evaluacioncapacitacion.satifacciondetema}">Satisfaccion en el Tema</td>
                 <td th:text="${evaluacioncapacitacion.comprenciondetema}">Comprension del Tema</td>
-                <td th:text="${evaluacioncapacitacion.planeaciontiempo}">Planeacion del tiempo</td>
-                <td th:text="${evaluacioncapacitacion.distribuciontiempo}">Distribucion de tiempo</td>
+                <td th:text="${evaluacioncapacitacion.planeaciontiempo}">Planeacion del tiempo</td>-->
+<!--                <td th:text="${evaluacioncapacitacion.distribuciontiempo}">Distribucion de tiempo</td>
                 <td th:text="${evaluacioncapacitacion.contenidoclaro}">Contenido Claro</td>
                 <td th:text="${evaluacioncapacitacion.contenidoaplicadotrabajo}">Contenido aplicado a su trabajo</td>
                 <td th:text="${evaluacioncapacitacion.satisfechocontenido}">Satisfecho con el contenido</td>
@@ -77,7 +77,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${evaluacioncapacitacion.materialutilizado}">Material Apropiado</td>
                 <td th:text="${evaluacioncapacitacion.tiempocapacitacionoptimo}">Tiempo Capacitacion Optimo</td>
                 <td th:text="${evaluacioncapacitacion.comentario}">Comentario o Sugerencia</td>
-                <td th:text="${evaluacioncapacitacion.puntualidad}">Puntualidad en Fecha y Horas</td>
+                <td th:text="${evaluacioncapacitacion.puntualidad}">Puntualidad en Fecha y Horas</td>-->
 
                 
                 
@@ -87,9 +87,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <!--<td th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre Capacitador</td>-->
                 
                 <td>
-                    <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-default">Edit</a>
-                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Delete</a>
+                    <a th:href="${'./show/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-info">Mostrar</a>
+                <a th:href="${'./edit/' + evaluacioncapacitacion.codigoevaluacioncapacitacion}" class="btn btn-success">Editar</a>
+                 <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${evaluacioncapacitacion.codigoevaluacioncapacitacion} + '\');'" >Eliminar</a>
                <!--<td><a th:href="${'./delete/' + capacitacion.codigocapacitacion}" class="btn btn-danger">Delete</a></td>-->
                     <!--<td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Delete</a></td>-->  
                 </td>
