--- a/src/main/resources/templates/fragments/inasistencia/buscar.html
+++ b/src/main/resources/templates/fragments/inasistencia/buscar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>Detalle de Inasistencias</title>
+        <title>Buscar Por Motivo</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -26,7 +26,7 @@
           <br />
           
           
-          <h3>Lista de resultados</h3>
+          <h3>Busqueda Por motivo</h3>
           <hr />
   
           
