--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -45,7 +45,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
                 
                 <td>
-                     <a th:href="${'./new/cuadrodirectivo'}" class="btn btn-primary">Nuevo</a>
+<!--                     <a th:href="${'./new/cuadrodirectivo'}" class="btn btn-primary">Nuevo</a>-->
                     <a th:href="${'./show/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-info">Mostrar</a>
                 <a th:href="${'./edit/' + cuadrodirectivo.codigocuadrodirectivo}" class="btn btn-success">Editar</a>
                <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${cuadrodirectivo.codigocuadrodirectivo} + '\');'" >Eliminar</a>
