--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -64,7 +64,7 @@
             </form>
               <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/inasistencias/}">Regresar</a></button>
+                        <button type="button" class="btn btn-info"><a href="#" th:href="@{/inasistencias/}">Regresar</a></button>
 
                     </div>
                 </div>
